--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,38 +1,125 @@
 .robot-container {
+  margin: 0;
+  position: absolute;
+  top: 500px;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .robot-face-shape {
+  width: 300px;
+  height: 300px;
+  background: slategray;
+  place-items: center;
+  border-radius: 25px;
+  border: dashed white;
 }
 
 .robot-eye-left {
+  width: 30%;
+  height: 2.5em;
+  background: red;
+  border-radius: 100px / 50px;
+  position: relative;
+  top: 70px;
+  left: -60px;
 }
 
 .robot-eye-right {
+  width: 50px;
+  height: 50px;
+  background: linear-gradient(blue, yellow);
+  border-radius: 50%;
+  position: relative;
+  top: 20px;
+  left: 60px;
 }
 
 .robot-ear-left {
+  width: 0;
+  height: 0;
+  border-top: 50px solid transparent;
+  border-right: 100px solid red;
+  border-bottom: 50px solid transparent;
+  position: relative;
+  bottom: 275px;
+  right: 103px;
 }
 
 .robot-ear-right {
+  width: 0;
+  height: 0;
+  border-top: 50px solid transparent;
+  border-left: 100px solid red;
+  border-bottom: 50px solid transparent;
+  position: relative;
+  bottom: 375px;
+  left: 303px;
 }
 
 .robot-nose {
+  width: 0;
+  height: 0;
+  border-left: 25px solid transparent;
+  border-right: 25px solid transparent;
+  border-bottom: 50px solid rgb(121, 113, 111, 0.7);
+  position: relative;
+  top: 25px;
+}
+
+.robot-mouth {
+  width: 240px;
+  height: 100px;
+  background: black;
+  border-radius: 0 0 50px 50px;
+  position: relative;
+  top: 40px;
+  background-image: url("https://picsum.photos/seed/picsum/240/100");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .robot-teeth {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  top: -60px;
 }
 
 .robot-tooth {
+  width: 15px;
+  height: 30px;
+  background: white;
+  border-radius: 3px;
+  margin: 2px;
 }
 
 .robot-hair-style {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  bottom: 603px;
 }
 
 .robot-hair-one {
+  width: 0;
+  height: 0;
+  border-bottom: 100px solid red;
+  border-right: 50px solid transparent;
 }
 
 .robot-hair-two {
+  width: 0;
+  height: 0;
+  border-bottom: 100px solid red;
+  border-left: 50px solid transparent;
 }
 
 .robot-hair-three {
+  width: 100px;
+  height: 50px;
+  background: red;
+  position: relative;
+  top: 50px;
 }
