--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -3,6 +3,8 @@
   padding: 30px;
   margin-top: 60px;
   width: 100%;
+  position: fixed;
+  left: 0;
 }
 
 .legal-header h1 {
@@ -12,6 +14,8 @@
 }
 
 main {
+  padding-bottom: 80px;
+  padding-top: 130px;
 }
 
 section {
@@ -26,6 +30,8 @@ section {
 }
 
 .section-label {
+  position: sticky;
+  top: 200px;
   width: 100%;
   background-color: #2b2d3b;
   height: max-content;
@@ -53,6 +59,9 @@ section {
 }
 
 footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
   display: flex;
   align-items: center;
   width: 100%;
